<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mame Launcher</string>
    <string name="header_title">Ryan and Jenkins\' bad-ass fuck yeah video games</string>

    <string name="settings">Settings</string>

    <string name="about_application">This application was written to be all that is awesome. Setup and designed to play all the best games ever made, so Ryan could pummel Jenkins like a little bitch. Also, Ryan is way more fucking awesome than Jenkins is. If you see Jenkins, please remind him how much better Ryan is.\n\n\nMurica.\n(&#169;) 2014. Fuck your rights.</string>

    <!--Console Names -->
    <string name="mame_emulator">Arcade</string>
    <string name="nes_emulator">Nintendo NES</string>
    <string name="snes_emulator">Super Nintendo</string>
    <string name="sega_genesis_emulator">Sega Genesis</string>
    <string name="atari_emulator">Atari</string>
    <string name="gameboy_emulator">Gameboy</string>
    <string name="nintendo_64_emulator">Nintendo 64</string>
    <string name="playstation_emulator">Playstation</string>
</resources>
