<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".Home">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/header_title"
        android:textColor="@android:color/darker_gray"
        android:textSize="26dip"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dip"
        />
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center">

        <TableRow
            android:gravity="center_horizontal"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginTop="20dip"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                >
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button"
                    android:src="@drawable/mame"
                    android:padding="20dip"
                    android:id="@+id/main_button_mame"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mame_emulator"
                    android:focusable="false"
                    android:textSize="20sp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginTop="20dip"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                >
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button"
                    android:src="@drawable/nes"
                    android:padding="20dip"
                    android:id="@+id/main_button_nes"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nes_emulator"
                    android:focusable="false"
                    android:textSize="20sp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginTop="20dip"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                >
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button"
                    android:src="@drawable/snes"
                    android:padding="20dip"
                    android:id="@+id/main_button_snes"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/snes_emulator"
                    android:focusable="false"
                    android:textSize="20sp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginTop="20dip"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                >
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button"
                    android:src="@drawable/genesis"
                    android:padding="20dip"
                    android:id="@+id/main_button_genesis"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sega_genesis_emulator"
                    android:focusable="false"
                    android:textSize="20sp"
                    />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:gravity="center_horizontal"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginTop="20dip"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                >
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button"
                    android:src="@drawable/atari"
                    android:padding="20dip"
                    android:id="@+id/main_button_atari"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/atari_emulator"
                    android:focusable="false"
                    android:textSize="20sp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginTop="20dip"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                >
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button"
                    android:src="@drawable/gameboy_advance"
                    android:padding="20dip"
                    android:id="@+id/main_button_gameboy"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gameboy_emulator"
                    android:focusable="false"
                    android:textSize="20sp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginTop="20dip"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                >
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button"
                    android:src="@drawable/n64"
                    android:padding="20dip"
                    android:id="@+id/main_button_n64"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nintendo_64_emulator"
                    android:textSize="20sp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginTop="20dip"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                >
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button"
                    android:src="@drawable/settings"
                    android:padding="20dip"
                    android:id="@+id/main_button_settings"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings"
                    android:textSize="20sp"
                    />
            </LinearLayout>

        </TableRow>

    </TableLayout>
</LinearLayout>
